--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Daily Update Image
 
 on:
   schedule:
-    - cron: "0 10 * * *"
+    - cron: "45 8 * * *"
   workflow_dispatch:
 
 permissions:
@@ -18,6 +18,9 @@ jobs:
         with:
           ref: dist
           path: dist
+      - uses: szenius/set-timezone@v2.0
+        with:
+          timezoneLinux: "Etc/GMT+10"
       - name: Generate the snake files in './dist/'
         uses: Platane/snk@v3
         id: snake-gif
@@ -26,7 +29,6 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-contribution-grid-snake.gif
         env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Push dist
